# LSDK

./: .gitignore  Cargo.toml  Makefile  README.md
___templates___/empty-project/src/: manifest.yaml
___templates___/empty-project/src/lifecycle/: main.c  on_change_activity.c
___templates___/empty-project/src/modules/: CMakeList.txt
___templates___/empty-project/src/modules/activities/: activity_main.c
cli/: Cargo.toml
cli/resources/: help.txt
cli/src/: args_declaration.rs  main.rs
cli/src/utils/: args.rs
lsdk-api/include/lsdk/project/gui/: prelude.h  settings.h
lsdk-api/include/lsdk/project/gui/lifecycle/: on_change.h  on_exit.h  on_init.h
